<resources>
    <string name="app_name">Vehicles</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_identifier">Vehicle identifier</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="started">Started:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="altitude">Altitude:</string>
    <string name="elapsed_time">Elapsed Time:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="gps_enabled">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="cell_text">Run at %1$s</string>

    <!-- Loading -->
    <string name="loading_title">Loading...</string>
    <string name="loading_content">Loading...</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="vehicle_identifier">Identifier</string>

    <!-- Track menu -->
    <string name="menu_action_start_track">Leaving DC</string>
    <string name="menu_action_leave_trans">Leaving Transshipment point</string>
    <string name="menu_action_start_load">Loading at DC</string>
    <string name="menu_action_start_transshipment">Loading at Transshipment point</string>
    <string name="menu_action_log_load">Forgot to track loading</string>

    <!-- Tracking -->
    <string name="track_distance_placeholder">0.00 km</string>
    <string name="track_speed_placeholder">0.00 kph</string>

    <!-- Parking -->
    <string name="parking_title">Parking</string>
    <string name="parking_content">You are currently searching for a parking spot.</string>
    <string name="parking_action">Parked</string>

    <!-- Delivering -->
    <string name="delivering_title">Delivering</string>
    <string name="delivering_content">You are currently delivering products.</string>
    <string name="delivering_action">Delivered</string>

    <!-- Empty -->
    <string name="empty_shops">No shops</string>

    <!-- Delivery -->
    <string-array name="delivery_types_array">
        <item>Delivery</item>
        <item>Pickup</item>
        <item>Both</item>
    </string-array>

    <string-array name="delivery_packages_array">
        <item>Products</item>
        <item>Parcel</item>
    </string-array>

    <!-- States -->
    <string name="state_idle">Idle</string>
    <string name="state_starting">Waiting to start trip</string>
    <string name="state_paused">Tracking paused</string>
    <string name="state_loading">Loading cargo</string>
    <string name="state_waiting">Waiting for location</string>
    <string name="state_tracking">Tracking route</string>
    <string name="state_transshipping">Transshipping</string>
    <string name="state_parking">Searching for parking</string>
    <string name="state_delivering">Stopped to deliver</string>

    <!-- State actions -->
    <string name="state_idle_action">Idle</string>
    <string name="state_starting_action">Start trip</string>
    <string name="state_paused_action">Pause</string>
    <string name="state_loading_action">Load cargo</string>
    <string name="state_waiting_action">Waiting for location</string>
    <string name="state_tracking_action">Back to trip</string>
    <string name="state_transshipping_action">At Transshipment point</string>
    <string name="state_parking_action">Searching for parking</string>
    <string name="state_delivering_action">Stopped to deliver</string>


    <!-- State speaking -->
    <string name="state_idle_speak">Idle</string>
    <string name="state_starting_speak">Waiting to start stip</string>
    <string name="state_paused_speak">Tracking paused</string>
    <string name="state_loading_speak">Loading cargo</string>
    <string name="state_waiting_speak">Waiting for a GPS trace</string>
    <string name="state_tracking_speak">Tracking trip</string>
    <string name="state_transshipping_speak">Transhipping</string>
    <string name="state_parking_speak">Searching for parking</string>
    <string name="state_delivering_speak">Ended delivery</string>
    <string name="state_delivered_speak">Starting delivery</string>
    <string name="state_returning_speak">Returning to truck</string>

    <string name="state_dc">At DC</string>
    <string name="state_trans">At Transshipment point</string>

    <!-- Errors -->
    <string name="error_logout">Logging out</string>

    <!-- Log Load -->
    <string name="dialog_log_load_title">Loading cargo</string>
    <string name="dialog_log_load_hint">Minutes</string>

    <!-- Dialog -->
    <string name="dialog_stop_title">Are you sure?</string>
    <string name="dialog_stop_message">You are about to stop a trip.</string>

    <string name="dialog_logout_title">Are you sure?</string>
    <string name="dialog_logout_message">You are about to logout the vehicle.</string>


    <!-- Vehicles -->
    <string name="vehicle_list_title">Vehicles</string>
</resources>
