<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout
    android:id="@+id/track_slidingUpPanel"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:gravity="bottom"
    sothree:umanoPanelHeight="48dp"
    sothree:umanoShadowHeight="4dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/track_mapLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/track_actionsMenu"
            fab:menu_animationDelayPerItem="0"
            fab:menu_backgroundColor="#ccffffff"
            fab:menu_labels_ellipsize="end"
            fab:menu_labels_position="left"
            fab:menu_labels_showShadow="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/track_logLoadButton"
                fab:fab_label="@string/menu_action_log_load"
                fab:fab_size="mini"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_log"/>

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/track_startLoadButton"
                fab:fab_label="@string/menu_action_start_load"
                fab:fab_size="mini"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_load"/>

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/track_startTrackButton"
                fab:fab_label="@string/menu_action_start_track"
                fab:fab_size="mini"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_road"/>

        </com.github.clans.fab.FloatingActionMenu>

    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                layout="@layout/track_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <include
                layout="@layout/track_stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <include
                layout="@layout/track_waiting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"/>

            <include
                layout="@layout/track_start"
                android:layout_width="match_parent"
                android:layout_height="128dp"/>

            <include
                layout="@layout/track_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <include
                        layout="@layout/track_parking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"/>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <include
                        layout="@layout/track_delivering"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"/>

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</com.sothree.slidinguppanel.SlidingUpPanelLayout>
